@@ -23,6 +23,10 @@
 package jdk.jpackage.test;
 
 import static java.util.Collections.unmodifiableSortedSet;
+import static java.util.stream.Collectors.joining;
+import static java.util.stream.Collectors.toMap;
+import static java.util.stream.Collectors.toSet;
+import static jdk.jpackage.test.AdditionalLauncher.getAdditionalLauncherProperties;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
@@ -41,11 +45,11 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.TreeMap;
 import java.util.TreeSet;
+import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import jdk.jpackage.internal.util.PathUtils;
 import jdk.jpackage.internal.util.function.ThrowingConsumer;
@@ -87,9 +91,7 @@ public final class LinuxHelper {
 
     public static Path getDesktopFile(JPackageCommand cmd, String launcherName) {
         cmd.verifyIsOfType(PackageType.LINUX);
-        String desktopFileName = String.format("%s-%s.desktop", getPackageName(
-                cmd), Optional.ofNullable(launcherName).orElseGet(
-                        () -> cmd.name()).replaceAll("\\s+", "_"));
+        var desktopFileName = getLauncherDesktopFileName(cmd, launcherName);
         return cmd.appLayout().desktopIntegrationDirectory().resolve(
                 desktopFileName);
     }
@@ -164,8 +166,7 @@ public final class LinuxHelper {
         switch (packageType) {
             case LINUX_DEB:
                 return Stream.of(getDebBundleProperty(cmd.outputBundle(),
-                        "Depends").split(",")).map(String::strip).collect(
-                        Collectors.toList());
+                        "Depends").split(",")).map(String::strip).toList();
 
             case LINUX_RPM:
                 return Executor.of("rpm", "-qp", "-R")
@@ -200,6 +201,20 @@ public final class LinuxHelper {
             default:
                 throw new UnsupportedOperationException();
         }
+    }
+
+    private static Path getFaIconFileName(JPackageCommand cmd, String mimeType) {
+        return Path.of(mimeType.replace('/', '-') + ".png");
+    }
+
+    static Path getLauncherDesktopFileName(JPackageCommand cmd, String launcherName) {
+        return Path.of(String.format("%s-%s.desktop", getPackageName(cmd),
+                Optional.ofNullable(launcherName).orElseGet(cmd::name).replaceAll("\\s+", "_")));
+    }
+
+    static Path getLauncherIconFileName(JPackageCommand cmd, String launcherName) {
+        return Path.of(String.format("%s.png",
+                Optional.ofNullable(launcherName).orElseGet(cmd::name).replaceAll("\\s+", "_")));
     }
 
     static PackageHandlers createDebPackageHandlers() {
@@ -326,10 +341,9 @@ public final class LinuxHelper {
         if (cmd.isRuntime()) {
             Path runtimeDir = cmd.appRuntimeDirectory();
             Set<Path> expectedCriticalRuntimePaths = CRITICAL_RUNTIME_FILES.stream().map(
-                    runtimeDir::resolve).collect(Collectors.toSet());
+                    runtimeDir::resolve).collect(toSet());
             Set<Path> actualCriticalRuntimePaths = getPackageFiles(cmd).filter(
-                    expectedCriticalRuntimePaths::contains).collect(
-                            Collectors.toSet());
+                    expectedCriticalRuntimePaths::contains).collect(toSet());
             checkPrerequisites = expectedCriticalRuntimePaths.equals(
                     actualCriticalRuntimePaths);
         } else {
@@ -375,8 +389,7 @@ public final class LinuxHelper {
         Function<List<String>, String> verifier = (lines) -> {
             // Lookup for xdg commands
             return lines.stream().filter(line -> {
-                Set<String> words = Stream.of(line.split("\\s+")).collect(
-                        Collectors.toSet());
+                Set<String> words = Stream.of(line.split("\\s+")).collect(toSet());
                 return words.contains("xdg-desktop-menu") || words.contains(
                         "xdg-mime") || words.contains("xdg-icon-resource");
             }).findFirst().orElse(null);
@@ -423,7 +436,12 @@ public final class LinuxHelper {
         });
     }
 
-    static void verifyDesktopFiles(JPackageCommand cmd, boolean installed) {
+    static void verifyDesktopIntegrationFiles(JPackageCommand cmd, boolean installed) {
+        verifyDesktopFiles(cmd, installed);
+        verifyAllIconsReferenced(cmd);
+    }
+
+    private static void verifyDesktopFiles(JPackageCommand cmd, boolean installed) {
         final var desktopFiles = getDesktopFiles(cmd);
         try {
             if (installed) {
@@ -454,11 +472,62 @@ public final class LinuxHelper {
     }
 
     private static Collection<Path> getDesktopFiles(JPackageCommand cmd) {
+
         var unpackedDir = cmd.appLayout().desktopIntegrationDirectory();
+
+        return relativePackageFilesInSubdirectory(cmd, ApplicationLayout::desktopIntegrationDirectory)
+                .filter(path -> {
+                    return path.getNameCount() == 1;
+                })
+                .filter(path -> {
+                    return ".desktop".equals(PathUtils.getSuffix(path));
+                })
+                .map(unpackedDir::resolve)
+                .toList();
+    }
+
+    private static Stream<Path> relativePackageFilesInSubdirectory(
+            JPackageCommand cmd, Function<ApplicationLayout, Path> subdirFunc) {
+
+        var unpackedDir = subdirFunc.apply(cmd.appLayout());
         var packageDir = cmd.pathToPackageFile(unpackedDir);
+
         return getPackageFiles(cmd).filter(path -> {
-            return packageDir.equals(path.getParent()) && path.getFileName().toString().endsWith(".desktop");
-        }).map(Path::getFileName).map(unpackedDir::resolve).toList();
+            return path.startsWith(packageDir);
+        }).map(packageDir::relativize);
+    }
+
+    private static void verifyAllIconsReferenced(JPackageCommand cmd) {
+
+        var installCmd = Optional.ofNullable(cmd.unpackedPackageDirectory()).map(_ -> {
+            return cmd.createMutableCopy().setUnpackedPackageLocation(null);
+        }).orElse(cmd);
+
+        var installedIconFiles = relativePackageFilesInSubdirectory(
+                installCmd,
+                ApplicationLayout::desktopIntegrationDirectory
+        ).filter(path -> {
+            return ".png".equals(PathUtils.getSuffix(path));
+        }).map(installCmd.appLayout().desktopIntegrationDirectory()::resolve).collect(toSet());
+
+        var referencedIcons = getDesktopFiles(cmd).stream().map(path -> {
+            return new DesktopFile(path, false);
+        }).<Path>mapMulti((desktopFile, sink) -> {
+            desktopFile.findQuotedValue("Icon").map(Path::of).ifPresent(sink);
+            desktopFile.find("MimeType").ifPresent(str -> {
+                Stream.of(str.split(";"))
+                        .map(mimeType -> {
+                            return getFaIconFileName(cmd, mimeType);
+                        })
+                        .map(installCmd.appLayout().desktopIntegrationDirectory()::resolve)
+                        .forEach(sink);
+            });
+        }).collect(toSet());
+
+        var unreferencedIconFiles = Comm.compare(installedIconFiles, referencedIcons).unique1().stream().sorted().toList();
+
+        // Verify that all package icon (.png) files are referenced from package .desktop files.
+        TKit.assertEquals(List.of(), unreferencedIconFiles, "Check there are no unreferenced icon files in the package");
     }
 
     private static String launcherNameFromDesktopFile(JPackageCommand cmd, Optional<AppImageFile> predefinedAppImage, Path desktopFile) {
@@ -496,7 +565,20 @@ public final class LinuxHelper {
         TKit.assertTrue(mandatoryKeys.isEmpty(), String.format(
                 "Check for missing %s keys in the file", mandatoryKeys));
 
-        for (var e : List.of(Map.entry("Type", "Application"), Map.entry("Terminal", "false"))) {
+        final String launcherDescription;
+        if (cmd.name().equals(launcherName) || predefinedAppImage.isPresent()) {
+            launcherDescription = Optional.ofNullable(cmd.getArgumentValue("--description")).orElseGet(cmd::name);
+        } else {
+            launcherDescription = getAdditionalLauncherProperties(cmd, launcherName).findProperty("description").or(() -> {
+                return Optional.ofNullable(cmd.getArgumentValue("--description"));
+            }).orElseGet(cmd::name);
+        }
+
+        for (var e : List.of(
+                Map.entry("Type", "Application"),
+                Map.entry("Terminal", "false"),
+                Map.entry("Comment", launcherDescription)
+        )) {
             String key = e.getKey();
             TKit.assertEquals(e.getValue(), data.find(key).orElseThrow(), String.format(
                     "Check value of [%s] key", key));
@@ -630,16 +712,19 @@ public final class LinuxHelper {
         });
 
         test.addBundleVerifier(cmd -> {
-            final Path mimeTypeIconFileName = fa.getLinuxIconFileName();
-            if (mimeTypeIconFileName != null) {
-                // Verify there are xdg registration commands for mime icon file.
-                Path mimeTypeIcon = cmd.appLayout().desktopIntegrationDirectory().resolve(
-                        mimeTypeIconFileName);
+            Optional.of(fa).filter(FileAssociations::hasIcon)
+                    .map(FileAssociations::getMime)
+                    .map(mimeType -> {
+                        return getFaIconFileName(cmd, mimeType);
+                    }).ifPresent(mimeTypeIconFileName -> {
+                        // Verify there are xdg registration commands for mime icon file.
+                        Path mimeTypeIcon = cmd.appLayout().desktopIntegrationDirectory().resolve(
+                                mimeTypeIconFileName);
 
-                Map<Scriptlet, List<String>> scriptlets = getScriptlets(cmd);
-                scriptlets.entrySet().stream().forEach(e -> verifyIconInScriptlet(
-                        e.getKey(), e.getValue(), mimeTypeIcon));
-            }
+                        Map<Scriptlet, List<String>> scriptlets = getScriptlets(cmd);
+                        scriptlets.entrySet().stream().forEach(e -> verifyIconInScriptlet(
+                                e.getKey(), e.getValue(), mimeTypeIcon));
+                    });
         });
     }
 
@@ -768,10 +853,10 @@ public final class LinuxHelper {
 
         static final Pattern RPM_HEADER_PATTERN = Pattern.compile(String.format(
                 "(%s) scriptlet \\(using /bin/sh\\):", Stream.of(values()).map(
-                        v -> v.rpm).collect(Collectors.joining("|"))));
+                        v -> v.rpm).collect(joining("|"))));
 
         static final Map<String, Scriptlet> RPM_MAP = Stream.of(values()).collect(
-                Collectors.toMap(v -> v.rpm, v -> v));
+                toMap(v -> v.rpm, v -> v));
     }
 
     public static String getDefaultPackageArch(PackageType type) {
@@ -848,7 +933,7 @@ public final class LinuxHelper {
                     } else {
                         return Map.entry(components[0], components[1]);
                     }
-                }).collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
+                }).collect(toMap(Map.Entry::getKey, Map.Entry::getValue));
             } catch (IOException ex) {
                 throw new UncheckedIOException(ex);
             }
